<resources>
    <string name="app_name">PommesfanIdent</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="importierte_profile">Importierte Profile</string>
    <string name="importierte_ausweise">Importierte Ausweise</string>
    <string name="eigene_profile">Eigene Profile</string>
    <string name="neues_ffentliches_profil">Neues Öffentliches Profil</string>
    <string name="ausweisnummer">Ausweisnummer</string>
    <string name="profilname">Profilname</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="geburtsdatum">Geburtsdatum</string>
    <string name="adresse">Adresse</string>
    <string name="dynamische_attribute">Dynamische Attribute</string>
    <string name="passbild">Passbild</string>
    <string name="h_ndische_unterschrift">Händische Unterschrift</string>
    <string name="ip_adresse">IP-Adresse</string>
    <string name="portnummer">Portnummer</string>
    <string name="ausweis_pr_fen">Ausweis prüfen</string>
    <string name="anzahl_tage_maximal_g_ltig">Anzahl Tage maximal gültig</string>
    <string name="erstellte_maximal_g_ltig_bis">Erstellte maximal gültig bis</string>
    <string name="g_ltig_bis_f_r_erstellung">Gültig bis für Erstellung</string>
    <string name="g_ltig_ab">Gültig ab</string>
    <string name="erstellt">Erstellt</string>
    <string name="g_ltig_bis">Gültig bis</string>
    <string name="krypto_passwort">Krypto-Passwort</string>
    <string name="einreichen">Einreichen</string>
    <string name="krypto_paraphrase">Krypto-Paraphrase</string>
    <string name="l_schen">Löschen</string>
    <string name="ueber_netzwerk_importieren">Über Netzwerk importieren</string>
    <string name="folgenummer">Folgenummer</string>
    <string name="name_profil">Name Profil</string>
    <string name="speichern">Speichern</string>
    <string name="g_ltig_bis_f_r_erstellte">Gültig bis für Erstellte</string>
    <string name="maximale_tage_g_ltigkeit">Maximale Tage Gültigkeit</string>
    <string name="sequenznummer">Sequenznummer</string>
    <string name="neues_profil">Neues Profil</string>
    <string name="neuer_ausweis">Neuer Ausweis</string>
    <string name="name">Name</string>
    <string name="passbild_hinzuf_gen">Passbild hinzufügen</string>
    <string name="h_ndische_unterschrift_hinzuf_gen">Händische unterschrift hinzufügen</string>
    <string name="erstellte_ausweise">Erstellte Ausweise</string>
    <string name="exportieren">Exportieren</string>
    <string name="privates_profil_exportieren">Privates Profil exportieren</string>
    <string name="ffentliches_profil_exportieren">Öffentliches Profil exportieren</string>
    <string name="importieren">Importieren</string>
    <string name="plus">+</string>
    <string name="folgenummer_profil">Folgenummer Profil</string>
    <string name="ber_bluetooth_importieren">Über Bluetooth importieren</string>
    <string name="privates_profil">Privates Profil</string>
    <string name="ffentliches_profil">Öffentliches Profil</string>
    <string name="datei">Datei</string>
    <string name="netzwerk">Netzwerk</string>
    <string name="bluetooth">Bluetooth</string>
</resources>