<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/newProfileLayout"
              tools:context=".ProfileEditor"
              android:orientation="vertical"
              android:layout_width="409dp"
              android:layout_height="729dp" tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="1dp">
        <Button
                android:id="@+id/btnSave"
                android:text="@string/speichern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/name_profil"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:id="@+id/textViewProfileName"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/profileName"/>
        <TextView
                android:text="@string/folgenummer"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:id="@+id/validFrom"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/sequence_number"/>
        <TextView
                android:text="@string/g_ltig_ab"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/valid_from"/>
        <TextView
                android:text="@string/g_ltig_bis_f_r_erstellung"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/valid_until_for_creation"/>
        <TextView
                android:text="@string/g_ltig_bis_f_r_erstellte"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/valid_until_for_created"/>
        <TextView
                android:text="@string/maximale_tage_g_ltigkeit"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/max_valid_days"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF5722"
                android:textStyle="bold|italic"
                android:text="@string/dynamische_attribute"/>
        <LinearLayout
                android:id="@+id/dynamicAttributes"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </LinearLayout>
        <Button
                android:id="@+id/btnAddAttribute"
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
</LinearLayout>