<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/newIDlayout"
              tools:context=".IDeditor"
              android:orientation="vertical"
              android:layout_width="409dp"
              android:layout_height="729dp" tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="1dp">
        <Button
                android:id="@+id/btnSave"
                android:text="@string/speichern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/g_ltig_bis"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/valid_until"/>
        <TextView
                android:text="@string/vorname"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/vorname"/>
        <TextView
                android:text="@string/nachname"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/nachname"/>
        <TextView
                android:text="@string/geburtsdatum"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/birthdate"/>
        <TextView
                android:text="@string/adresse"
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/address"/>
        <Button
                android:id="@+id/btnAddPersonalimage"
                android:text="@string/passbild_hinzuf_gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:id="@+id/personalImagePath"/>
        <Button
                android:id="@+id/btnAddHandSignature"
                android:text="@string/h_ndische_unterschrift_hinzuf_gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:id="@+id/handSignaturePath"/>
</LinearLayout>