<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        tools:context=".MainMenu">
    <Button
            android:id="@+id/ownProfiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eigene_profile" />
    <Button
            android:id="@+id/importedProfiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importierte_profile" />
    <Button
            android:id="@+id/importedPersonalIDs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importierte_ausweise" />
    </LinearLayout>
