<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/publicProfileDetailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        tools:context=".ProfileDetailView">

        <LinearLayout
                android:id="@+id/publicProfileAttributes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <Button
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#FF0840"
                                android:textStyle="bold|italic"
                                android:text="@string/l_schen"
                                android:id="@+id/btnDelete" />
                        <Button
                                android:textSize="20sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#8BC34A"
                                android:textStyle="bold|italic"
                                android:text="@string/neuer_ausweis"
                                android:id="@+id/btnNewID" />
        </LinearLayout>
        <Button
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8BC34A"
                android:textStyle="bold|italic"
                android:text="@string/profil_speichern"
                android:id="@+id/btnExportProfile" />
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/profilname" />
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fieldprofileName"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/sequenznummer" />
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sequence_number"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/erstellt"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/created"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/g_ltig_ab"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valid_from"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/g_ltig_bis_f_r_erstellung"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valid_for_creation"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/erstellte_maximal_g_ltig_bis"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valid_for_created"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/anzahl_tage_maximal_g_ltig"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/max_valid_days"/>
        <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_700"
                android:textStyle="bold|italic"
                android:text="@string/dynamische_attribute"/>
    </LinearLayout>
</ScrollView>